harness/test/errors/044_double_colon_type_annot.eu
# Mistake: using '::' for a type annotation (Haskell/Rust style)
x :: Int
x: 42
